// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogActions ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiDialogActions-root MuiDialogActions-spacing css-1c059f0-MuiDialogActions-root"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation css-gq5jh7-MuiButtonBase-root-MuiButton-root"
      color="primary"
      tabindex="0"
      type="button"
    >
      Close
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`DialogActions ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiDialogActions-root MuiDialogActions-spacing css-jas4ct-MuiDialogActions-root"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-q8ru1j-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Close
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`DialogActions ENCOURA_DATALAB theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiDialogActions-root MuiDialogActions-spacing css-jas4ct-MuiDialogActions-root"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation css-1m9ygoa-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Close
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
